First Page setup time 24.50

--- a/puddle/core/templates/core/contact.html
+++ b/puddle/core/templates/core/contact.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 
-{%block title%}Welcome {% endblock %}
+{%block title%}Contacts {% endblock %}
 
 {% block content %}
-    <h1>The Front Page</h1>
+    <h1>Contact Page</h1>
 {% endblock %}
